--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@ body {
   min-height: 100vh;
 }
 
+.sc-jSUZER::-webkit-scrollbar {
+  display: none;
+ }
+
 #root {
   max-width: 1280px;
   padding: 10px;
