--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   min-height: 100vh;
 }
 
-.sc-jSUZER::-webkit-scrollbar {
+.sc-gKPRtg::-webkit-scrollbar, .sc-ipEyDJ::-webkit-scrollbar, .sc-ipEyDJ::-webkit-scrollbar {
   display: none;
  }
 
